# ladybug-java

./: CMakeLists.txt  build.gradle  download-native-libs.sh
.github/workflows/: java.yml
gradle/wrapper/: gradle-wrapper.properties
src/jni/: lbug_java.cpp
src/main/java/com/lbugdb/: Native.java
